--- a/Prototypes/index.html
+++ b/Prototypes/index.html
@@ -20,7 +20,35 @@
                 <p id="loading-module-name"></p>
             </div>
         </div>
-        <div id="container-region" class="container">
+        <div id="container-region" class="grid">
+        <div class="grid-sizer"></div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/bwy74ok.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/bAZWoqx.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/PgmEBSB.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/aboaFoB.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/LkmcILl.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/q9zO6tw.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/r8p3Xgq.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/hODreXI.jpg" />
+          </div>
+          <div class="grid-item">
+            <img src="http://i.imgur.com/UORFJ3w.jpg" />
+          </div>
         </div>
         <div id="footer-region"></div>
         <div id="popups-region"></div>
